# NLP_project

./: README.md  pyproject.toml
NLP_Project_GitHub/: requirements.txt
NLP_Project_GitHub/models/: README.md
NLP_Project_GitHub/scripts/: analyze_failures.py  check_data_samples.py  improve_metric.py  plot_refined_results.py  refinement_ablation.py  run_embeddings.py  run_pipeline.py  smoke_tests.py
NLP_Project_GitHub/src/semantic_similarity_eval/: __init__.py
NLP_Project_GitHub/src/semantic_similarity_eval/analysis/: __init__.py  embedding_ablation.py  refine_evaluation.py
NLP_Project_GitHub/src/semantic_similarity_eval/pipeline/: __init__.py  run_embeddings.py  run_eval_correctness.py  run_inference.py  run_pipeline.py
NLP_Project_GitHub/src/semantic_similarity_eval/tools/: smoke_tests.py
NLP_Project_GitHub/src/semantic_similarity_eval/utils/: __init__.py  logging_utils.py  (+1 more)
data/processed/: README.md
docs/: DATA_AND_MODELS.md
outputs/: README.md
scripts/: _bootstrap.py  analyze_similarity.py  embedding_ablation.py  encoder_embedding.py  eval_hem.py  llama_Inference.py  refine_evaluation.py  run_eval_correctness.py  run_inference.py
src/semantic_similarity_eval/: __main__.py  config.py
src/semantic_similarity_eval/analysis/: analyze_failures.py  analyze_similarity.py  improve_metric.py  plot_refined_results.py  refinement_ablation.py
src/semantic_similarity_eval/pipeline/: run_pipeline.py
src/semantic_similarity_eval/tools/: __init__.py  check_data_samples.py
src/semantic_similarity_eval/utils/: io.py  metrics.py  modeling.py
