[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "semantic-similarity-eval"
version = "0.1.0"
description = "Semantic similarity evaluation pipeline for LLM QA correctness."
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]
